# xbuild

./: .gitconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  xbuild.bashrc  xbuild.py
cmake/: README.md  xbuild-common-compiler.cmake  xbuild-common-core.cmake  xbuild-common-platform.cmake  xbuild-compiler-common-options.cmake  xbuild-compiler-config.cmake  xbuild-compiler-llvm.cmake  xbuild-compiler-msvc.cmake  xbuild-compiler.cmake  xbuild-env-linux.cmake  xbuild-env-macos.cmake  xbuild-env-windows.cmake  xbuild-env.cmake  xbuild-init-project.cmake  xbuild-internal-options.cmake  xbuild-master.cmake  xbuild-platform-android.cmake  xbuild-platform-apple.cmake  xbuild-platform-ios.cmake  xbuild-platform-linux.cmake  xbuild-platform-macos.cmake  xbuild-platform-windows.cmake  xbuild-platform.cmake  xbuild-prelude.cmake  xbuild-project.cmake  xbuild-target.cmake  xbuild-util-cmake.cmake  xbuild-util-core.cmake  xbuild-util-find.cmake  xbuild-util-log.cmake  xbuild-util-options.cmake
docs/: xbuild-git-command.md
examples/: CMakeLists.txt
examples/simple_console/: CMakeLists.txt  Sources.cmake
examples/simple_console/src/: main.cpp
examples/simple_slib/: CMakeLists.txt  Sources.cmake
examples/simple_slib/src/: main.cpp
examples/simple_win32_app/: Sources.cmake
examples/simple_win32_dll/: Sources.cmake
examples/simple_win32_drv/: Sources.cmake
examples/simple_win32_drv/src/: entry.c
make/: xmake_common.mak  xmake_compiler_gcc.mak  xmake_compiler_llvm.mak  xmake_compiler_vs.mak  xmake_compiler_win.mak  xmake_env_linux.mak  xmake_env_mac.mak  (+5 more)
(+2071 files in other folders)
